--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             this.motionDetection = false;
             this.previousFaces = [];
             this.photoCount = 0;
-            this.motionThreshold = 800; // px/s - VERY high = barely sensitive
-            this.captureCooldown = 10000; // ms - 10 second cooldown
+            this.motionThreshold = 500; // px/s - slightly more sensitive
+            this.captureCooldown = 8000; // ms - 8 second cooldown
             this.lastCaptureTime = 0;
             this.currentMotionSpeed = 0;
             this.highMotionStartTime = 0; // Track when high motion started
@@ -296,9 +296,9 @@
                 return best * 60; // approx px/s from per-frame delta at ~60fps
             });
             
-            // HEAVY smoothing to reduce noise - much less sensitive
+            // Moderate smoothing - slightly more sensitive
             const avgSpeed = speeds.length ? (speeds.reduce((a,b)=>a+b,0)/speeds.length) : 0;
-            this.currentMotionSpeed = this.currentMotionSpeed * 0.9 + avgSpeed * 0.1; // HEAVY smoothing
+            this.currentMotionSpeed = this.currentMotionSpeed * 0.8 + avgSpeed * 0.2; // Moderate smoothing
             
             this.motionSpeed.textContent = this.currentMotionSpeed.toFixed(2);
             this.previousFaces = now;
@@ -309,8 +309,8 @@
                 if (this.highMotionStartTime === 0) {
                     this.highMotionStartTime = now; // Start timing high motion
                 }
-                // Require 2 seconds of sustained high motion before capturing
-                if (now - this.highMotionStartTime > 2000) {
+                // Require 1.5 seconds of sustained high motion before capturing
+                if (now - this.highMotionStartTime > 1500) {
                     this.captureAuto();
                     this.highMotionStartTime = 0; // Reset
                 }
